solve the z-index & menu problem

--- a/css/css-koli.css
+++ b/css/css-koli.css
@@ -895,7 +895,6 @@ div.subgallery-h1  a img{
 	-moz-transition: -moz-transform 1s;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
-	opacity:0.7;
 	z-index:100;
 
 }
@@ -910,12 +909,10 @@ div.subgallery-h a img{
 	-moz-transition: -moz-transform 1s;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
-	opacity:0.7;
 	z-index:100;
 }
 
 div.subgallery-h a img:hover, div.subgallery-h1 a img:hover{
-	opacity:1;
 	-webkit-transform:scale(1.5,1.5);
 	-webkit-transform:all .75s linear;
 	-moz-transform:scale(1.5,1.5);
