--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,8 @@ div.menu-train{
 }
 
 div.menu-train > div{
-	width:30px;
+	width:35px;
 	float:left;
-	overflow:hidden;	
 	-webkit-transition:all .75s;/* Safari and Chrome */
 	-moz-transition:all .75s;/* Firefox */
 }
@@ -74,19 +73,20 @@ div.menu-train div.rotate1 span{
 
 
 
-div.show:hover div.menu-train div.rotate1{
+/*div.show:hover div.menu-train div.rotate1{
 	width:100px;
 	height:20px;
 	position:relative;
 	left:0;
 	bottom:45px;
-	background-color:#CCC;
+	background-color:#000;
+	opacity:.5;
 	transform:rotate(0deg);
 	-ms-transform: rotate(0deg); /* IE 9 */
-	-webkit-transform: rotate(0deg); /* Safari and Chrome */
-	-o-transform: rotate(0deg); /* Opera */
-	-moz-transform: rotate(0deg); /* Firefox */
-}
+	/*-webkit-transform: rotate(0deg); /* Safari and Chrome */
+	/*-o-transform: rotate(0deg); /* Opera */
+	/*-moz-transform: rotate(0deg); /* Firefox */
+/*}*/
 
 div.menu-train div.rotate , div.menu-train div.rotate1{
 	width:100px;
